--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "By: Rhett Beardemphl",
   "main": "eventPool.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node hub.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chance": "^1.1.11"
+    "chance": "^1.1.11",
+    "jest": "^29.6.2"
   }
 }
